--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -54,7 +54,7 @@
 
 | 日期與時間            | 紀錄人 | 課程內容                                                     | 導讀人 |
 | --------------------- | ------ | ------------------------------------------------------------ | ------ |
-| 2023/2/17 18:20~21:20 | 李佳樺 | 讀書會介紹、基礎資料結構(懶標線段樹、BIT、並查集)題目分享    | 李佳樺 |
+| 2023/2/17 18:20~21:20 | 李佳樺 | 讀書會介紹、基礎資料結構(懶標線段樹、BIT、並查集)            |        |
 | 2023/2/24 18:20~21:20 |        | 進階資料結構(動態開點、Treap、持久化)、分享其他資料結構(如柯朵莉樹、李超線段樹等) |        |
 | 2023/3/3  18:20~21:20 |        | 基礎計算幾何(線性代數、線段、凸包演算法、旋轉卡尺、模擬退火等) |        |
 | 2023/3/10 18:20~21:20 |        | 進階計算幾何(凸包優化、計算幾何雜項)                         |        |
