--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -39,16 +39,16 @@
 
 ### 五、成員
 
-| 姓名   | 電話 | 系所           | 學號 | 身分   | email |
-| ------ | ---- | -------------- | ---- | ------ | ----- |
-| 李佳樺 |      | 清華學院學士班 |      | 大學生 |       |
-| 張睿玹 |      | 清華學院學士班 |      | 大學生 |       |
-| 黃頂軒 |      | 清華學院學士班 |      | 大學生 |       |
-| 羅文謙 |      | 資工系         |      | 大學生 |       |
-| 黃祥陞 |      | 資工系         |      | 大學生 |       |
-| 張晏誠 |      | 資工系         |      | 大學生 |       |
-| 葉宥辰 |      | 資工系         |      | 大學生 |       |
-|        |      |                |      |        |       |
+| 姓名   | 系所           | 學號 | 身分   |
+| ------ | -------------- | ---- | ------ |
+| 李佳樺 | 清華學院學士班 |      | 大學生 |
+| 張睿玹 | 清華學院學士班 |      | 大學生 |
+| 黃頂軒 | 清華學院學士班 |      | 大學生 |
+| 羅文謙 | 資工系         |      | 大學生 |
+| 黃祥陞 | 資工系         |      | 大學生 |
+| 張晏誠 | 資工系         |      | 大學生 |
+| 葉宥辰 | 資工系         |      | 大學生 |
+|        |                |      |        |
 
 ## 貳、集會內容
 
@@ -58,7 +58,7 @@
 | 2023/2/24 18:20~21:20 |        | 進階資料結構(動態開點、Treap、持久化)、分享其他資料結構(如柯朵莉樹、李超線段樹等) |        |
 | 2023/3/3  18:20~21:20 |        | 基礎計算幾何(線性代數、線段、凸包演算法、旋轉卡尺、模擬退火等) |        |
 | 2023/3/10 18:20~21:20 |        | 進階計算幾何(凸包優化、計算幾何雜項)                         |        |
-| 2023/3/17 18:20~21:20 |        | 字串演算法(Hash、Trie、KMP、Z函數、AC自動機、Suffix Array)   |        |
+| 2023/3/17 18:20~21:20 |        | 字串演算法(Hash、Trie、KMP、Z函數、AC自動機、Suffix Array)   | 黃頂軒 |
 | 2023/3/24 18:20~21:20 |        | 網路流(Flow簡介、最大流、最小割、費用流)                     |        |
 | 2023/3/31 18:20~21:20 |        | 動態規劃優化1(單調隊列優化、斜率優化)                        |        |
 | 2023/4/7  18:20~21:20 |        | 動態規劃優化2(四邊形優化、分治優化、Aliens優化)              |        |
