--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -62,7 +62,7 @@
 | 2023/3/24 18:20~21:20 |        | 網路流(Flow簡介、最大流、最小割、費用流)                     |        |
 | 2023/3/31 18:20~21:20 |        | 動態規劃優化1(單調隊列優化、斜率優化)                        |        |
 | 2023/4/7  18:20~21:20 |        | 動態規劃優化2(四邊形優化、分治優化、Aliens優化)              |        |
-| 2023/4/14 18:20~21:20 |        | 根號算法(分塊、莫隊演算法、平方分解)                         |        |
+| 2023/4/14 18:20~21:20 |        | 根號算法(分塊、莫隊演算法、平方分解)                         | 葉宥辰 |
 | 2023/4/21 18:20~21:20 |        | 進階圖論1(歐拉路徑、輕重鏈剖分、樹分治、重心分治、重心剖分)  |        |
 | 2023/4/28 18:20~21:20 |        | 進階圖論2(樹上莫隊、連通分量、二分圖最大匹配、獨立集與覆蓋)  |        |
 | 2023/5/5  18:20~21:20 |        | 進階數論(賽局、Burnside's lemma、原根、生成函數、快速傅立葉變換、離散傅立葉變換) |        |
