--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -65,7 +65,7 @@
 | 2023/4/14 18:20~21:20 |        | 根號算法(分塊、莫隊演算法、平方分解)                         | 葉宥辰 |
 | 2023/4/21 18:20~21:20 |        | 進階圖論1(歐拉路徑、輕重鏈剖分、樹分治、重心分治、重心剖分)  |        |
 | 2023/4/28 18:20~21:20 |        | 進階圖論2(樹上莫隊、連通分量、二分圖最大匹配、獨立集與覆蓋)  |        |
-| 2023/5/5  18:20~21:20 |        | 進階數論(賽局、Burnside's lemma、原根、生成函數、快速傅立葉變換、離散傅立葉變換) |        |
+| 2023/5/5  18:20~21:20 |        | 進階數論(賽局、Burnside's lemma、原根、生成函數、快速傅立葉變換、離散傅立葉變換) | 黃頂軒 |
 
 ## 參、導讀人資料
 
