--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -49,6 +49,7 @@
 | 張晏誠 | 資工系         |      | 大學生 |
 | 葉宥辰 | 資工系         |      | 大學生 |
 | 熊恩伶 | 資工系         |      | 大學生 |
+| 莊秉澂 | 電資學院學士班 |      | 大學生 |
 |        |                |      |        |
 
 ## 貳、集會內容
