--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -57,17 +57,17 @@
 | 日期與時間            | 紀錄人 | 課程內容                                                     | 導讀人 |
 | --------------------- | ------ | ------------------------------------------------------------ | ------ |
 | 2023/2/17 18:20~21:20 | 李佳樺 | 讀書會介紹、基礎資料結構(懶標線段樹、BIT、並查集)            |        |
-| 2023/2/24 18:20~21:20 |        | 進階資料結構(動態開點、Treap、持久化)、分享其他資料結構(如柯朵莉樹、李超線段樹等) |        |
-| 2023/3/3  18:20~21:20 |        | 基礎計算幾何(線性代數、線段、凸包演算法、旋轉卡尺、模擬退火等) |        |
+| 2023/2/24 18:20~21:20 |        | 進階資料結構(動態開點、Treap、持久化)                        |        |
+| 2023/3/3  18:20~21:20 |        | 基礎計算幾何(線性代數、線段、凸包演算法、旋轉卡尺等)         |        |
 | 2023/3/10 18:20~21:20 |        | 進階計算幾何(凸包優化、計算幾何雜項)                         |        |
 | 2023/3/17 18:20~21:20 |        | 字串演算法(Hash、Trie、KMP、Z函數、AC自動機、Suffix Array)   | 黃頂軒 |
 | 2023/3/24 18:20~21:20 |        | 網路流(Flow簡介、最大流、最小割、費用流)                     |        |
 | 2023/3/31 18:20~21:20 |        | 動態規劃優化1(單調隊列優化、斜率優化)                        |        |
-| 2023/4/7  18:20~21:20 |        | 動態規劃優化2(四邊形優化、分治優化、Aliens優化)              |        |
+| 2023/4/7  18:20~21:20 |        | 動態規劃優化2(分治優化、Aliens優化)                          |        |
 | 2023/4/14 18:20~21:20 |        | 根號算法(分塊、莫隊演算法、平方分解)                         | 葉宥辰 |
 | 2023/4/21 18:20~21:20 |        | 進階圖論1(歐拉路徑、輕重鏈剖分、樹分治、重心分治、重心剖分)  |        |
 | 2023/4/28 18:20~21:20 |        | 進階圖論2(樹上莫隊、連通分量、二分圖最大匹配、獨立集與覆蓋)  |        |
-| 2023/5/5  18:20~21:20 |        | 進階數論(賽局、Burnside's lemma、原根、生成函數、快速傅立葉變換、離散傅立葉變換) | 黃頂軒 |
+| 2023/5/5  18:20~21:20 |        | 進階數論(賽局、Burnside's lemma、生成函數、快速傅立葉變換、離散傅立葉變換) | 黃頂軒 |
 
 ## 參、導讀人資料
 
