--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -50,6 +50,7 @@
 | 葉宥辰 | 資工系         |      | 大學生 |
 | 熊恩伶 | 資工系         |      | 大學生 |
 | 莊秉澂 | 電資學院學士班 |      | 大學生 |
+| 謝師誠 | 資工系         |      | 大學生 |
 |        |                |      |        |
 
 ## 貳、集會內容
@@ -62,7 +63,7 @@
 | 2023/3/10 18:20~21:20 |        | 進階計算幾何(凸包優化、計算幾何雜項)                         |        |
 | 2023/3/17 18:20~21:20 |        | 字串演算法(Hash、Trie、KMP、Z函數、AC自動機、Suffix Array)   | 黃頂軒 |
 | 2023/3/24 18:20~21:20 |        | 網路流(Flow簡介、最大流、最小割、費用流)                     |        |
-| 2023/3/31 18:20~21:20 |        | 動態規劃優化1(單調隊列優化、斜率優化)                        |        |
+| 2023/3/31 18:20~21:20 |        | 動態規劃優化1(單調隊列優化、斜率優化)                        | 謝師誠 |
 | 2023/4/7  18:20~21:20 |        | 動態規劃優化2(分治優化、Aliens優化)                          |        |
 | 2023/4/14 18:20~21:20 |        | 根號算法(分塊、莫隊演算法、平方分解)                         | 葉宥辰 |
 | 2023/4/21 18:20~21:20 |        | 進階圖論1(歐拉路徑、輕重鏈剖分、樹分治、重心分治、重心剖分)  |        |
