--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -64,7 +64,7 @@
 | 2023/3/10 18:20~21:20                  |        | 進階資料結構1(Treap)                                |        |
 | 2023/3/17 18:20~21:20                  |        | 進階資料結構2(持久化)                               |        |
 | 2023/3/24 18:20~21:20                  |        | 根號算法(分塊、莫隊演算法、平方根分解)              | 葉宥辰 |
-| 2023/3/31 18:20~21:20                  |        | 進階圖論1(歐拉路徑、橋、關節點、BCC、SCC)           |        |
+| 2023/3/31 18:20~21:20                  |        | 進階圖論1(歐拉路徑、橋、關節點、BCC、SCC)           | 羅文謙 |
 | 2023/4/7  18:20~21:20                  |        | 網路流(Flow簡介、最大流、最小割、費用流)            | 黃頂軒 |
 | 2023/4/14 18:20~21:20                  |        | 進階圖論2(二分圖最大匹配、獨立集與覆蓋)             |        |
 | 2023/4/21 18:20~21:20                  |        | 進階樹論(樹上啟發式、樹背包、輕重鏈剖分)            | 葉宥辰 |
