--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -61,7 +61,7 @@
 | 2023/2/17 18:20~21:20                  | 李佳樺 | 讀書會介紹、基礎資料結構1(ST表、BIT)                | 葉宥辰 |
 | 2023/2/24 18:20~21:20                  |        | 基礎資料結構2(懶標線段樹、動態開點)                 | 黃祥陞 |
 | 2023/3/3  18:20~21:20                  |        | 基礎資料結構3(並查集及其應用)                       | 葉宥辰 |
-| 2023/3/10 18:20~21:20                  |        | 進階資料結構1(Treap)                                |        |
+| 2023/3/10 18:20~21:20                  |        | 進階資料結構1(Treap)                                | 張晏誠 |
 | 2023/3/17 18:20~21:20                  |        | 進階資料結構2(持久化)                               |        |
 | 2023/3/24 18:20~21:20                  |        | 根號算法(分塊、莫隊演算法、平方根分解)              | 葉宥辰 |
 | 2023/3/31 18:20~21:20                  |        | 進階圖論1(歐拉路徑、橋、關節點、BCC、SCC)           | 羅文謙 |
