--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -39,20 +39,21 @@
 
 ### 五、成員
 
-| 姓名   | 系所           | 學號 | 身分   |
-| ------ | -------------- | ---- | ------ |
-| 李佳樺 | 清華學院學士班 |      | 大學生 |
-| 張睿玹 | 清華學院學士班 |      | 大學生 |
-| 黃頂軒 | 清華學院學士班 |      | 大學生 |
-| 羅文謙 | 資工系         |      | 大學生 |
-| 黃祥陞 | 資工系         |      | 大學生 |
-| 張晏誠 | 資工系         |      | 大學生 |
-| 葉宥辰 | 資工系         |      | 大學生 |
-| 熊恩伶 | 資工系         |      | 大學生 |
-| 莊秉澂 | 電資學院學士班 |      | 大學生 |
-| 謝師誠 | 資工系         |      | 大學生 |
-| 李昕威 | 資工系         |      | 大學生 |
-|        |                |      |        |
+| 姓名   | 電話       | 系所           | 學號      | 身分   |
+| ------ | ---------- | -------------- | --------- | ------ |
+| 李佳樺 | 0908307601 | 清華學院學士班 | 111000104 | 大學生 |
+| 張睿玹 |            | 清華學院學士班 |           | 大學生 |
+| 黃頂軒 |            | 清華學院學士班 |           | 大學生 |
+| 羅文謙 |            | 資工系         |           | 大學生 |
+| 黃祥陞 |            | 資工系         |           | 大學生 |
+| 張晏誠 |            | 資工系         |           | 大學生 |
+| 葉宥辰 |            | 資工系         |           | 大學生 |
+| 熊恩伶 |            | 資工系         |           | 大學生 |
+| 莊秉澂 |            | 電資學院學士班 |           | 大學生 |
+| 謝師誠 |            | 資工系         |           | 大學生 |
+| 李昕威 |            | 資工系         |           | 大學生 |
+| 徐竣霆 | 0963543769 | 電資學院學士班 | 110060012 | 大學生 |
+| 林芷儀 | 0983655592 | 工學院學士班   | 110030018 | 大學生 |
 
 ## 貳、集會內容
 
