--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -43,15 +43,14 @@
 | ------ | ---------- | -------------- | --------- | ------ |
 | 李佳樺 | 0908307601 | 清華學院學士班 | 111000104 | 大學生 |
 | 張睿玹 |            | 清華學院學士班 |           | 大學生 |
-| 黃頂軒 |            | 清華學院學士班 |           | 大學生 |
+| 黃頂軒 | 0902337526 | 清華學院學士班 | 111000223 | 大學生 |
 | 羅文謙 |            | 資工系         |           | 大學生 |
-| 黃祥陞 |            | 資工系         |           | 大學生 |
 | 張晏誠 |            | 資工系         |           | 大學生 |
+| 黃祥陞 |            | 資工系         |           | 大學生 |
 | 葉宥辰 |            | 資工系         |           | 大學生 |
 | 熊恩伶 |            | 資工系         |           | 大學生 |
-| 莊秉澂 |            | 電資學院學士班 |           | 大學生 |
 | 謝師誠 |            | 資工系         |           | 大學生 |
-| 李昕威 |            | 資工系         |           | 大學生 |
+| 李昕威 | 0966882869 | 資工系         | 109062309 | 大學生 |
 | 徐竣霆 | 0963543769 | 電資學院學士班 | 110060012 | 大學生 |
 | 林芷儀 | 0983655592 | 工學院學士班   | 110030018 | 大學生 |
 
@@ -60,21 +59,21 @@
 | 日期與時間                             | 紀錄人 | 課程內容                                            | 導讀人 |
 | -------------------------------------- | ------ | --------------------------------------------------- | ------ |
 | 2023/2/17 18:20~21:20                  | 李佳樺 | 讀書會介紹、基礎資料結構1(ST表、BIT)                | 葉宥辰 |
-| 2023/2/24 18:20~21:20                  |        | 基礎資料結構2(懶標線段樹、動態開點)                 | 黃祥陞 |
-| 2023/3/3  18:20~21:20                  |        | 基礎資料結構3(並查集及其應用)                       | 葉宥辰 |
-| 2023/3/10 18:20~21:20                  |        | 進階資料結構1(Treap)                                | 張晏誠 |
-| 2023/3/17 18:20~21:20                  |        | 進階資料結構2(持久化)                               |        |
-| 2023/3/24 18:20~21:20                  |        | 根號算法(分塊、莫隊演算法、平方根分解)              | 葉宥辰 |
-| 2023/3/31 18:20~21:20                  |        | 進階圖論1(歐拉路徑、橋、關節點、BCC、SCC)           | 羅文謙 |
-| 2023/4/7  18:20~21:20                  |        | 網路流(Flow簡介、最大流、最小割、費用流)            | 黃頂軒 |
-| 2023/4/14 18:20~21:20                  |        | 進階圖論2(二分圖最大匹配、獨立集與覆蓋)             |        |
-| 2023/4/21 18:20~21:20                  |        | 進階樹論(樹上啟發式、樹背包、輕重鏈剖分)            | 葉宥辰 |
-| 2023/4/28 18:20~21:20                  |        | 基礎計算幾何(線性代數、線段、凸包演算法)            |        |
-| 2023/5/5  18:20~21:20                  |        | 進階計算幾何(凸包優化、旋轉卡尺)                    |        |
-| 2023/5/12 18:20~21:20                  |        | 字串演算法1(Hash、Trie、KMP、Z函數)                 | 黃頂軒 |
-| 2023/5/19 18:20~21:20                  |        | 字串演算法2(AC自動機、Suffix Array)                 | 黃頂軒 |
-| 2023/5/26 18:20~21:20                  |        | 動態規劃優化1(單調隊列優化、斜率優化)               | 謝師誠 |
-| 2023/6/2  18:20~21:20                  |        | 動態規劃優化2(分治優化)                             |        |
+| 2023/2/24 18:20~21:20                  | 張睿玹 | 基礎資料結構2(懶標線段樹、動態開點)                 | 黃祥陞 |
+| 2023/3/3  18:20~21:20                  | 李佳樺 | 基礎資料結構3(並查集及其應用)                       | 葉宥辰 |
+| 2023/3/10 18:20~21:20                  | 羅文謙 | 進階資料結構1(Treap)                                | 張晏誠 |
+| 2023/3/17 18:20~21:20                  | 黃祥陞 | 進階資料結構2(持久化)                               |        |
+| 2023/3/24 18:20~21:20                  | 李佳樺 | 根號算法(分塊、莫隊演算法、平方根分解)              | 葉宥辰 |
+| 2023/3/31 18:20~21:20                  | 葉宥辰 | 進階圖論1(歐拉路徑、橋、關節點、BCC、SCC)           | 羅文謙 |
+| 2023/4/7  18:20~21:20                  | 熊恩伶 | 網路流(Flow簡介、最大流、最小割、費用流)            | 黃頂軒 |
+| 2023/4/14 18:20~21:20                  | 謝師誠 | 進階圖論2(二分圖最大匹配、獨立集與覆蓋)             |        |
+| 2023/4/21 18:20~21:20                  | 徐竣霆 | 進階樹論(樹上啟發式、樹背包、輕重鏈剖分)            | 葉宥辰 |
+| 2023/4/28 18:20~21:20                  | 林芷儀 | 基礎計算幾何(線性代數、線段、凸包演算法)            |        |
+| 2023/5/5  18:20~21:20                  | 李佳樺 | 進階計算幾何(凸包優化、旋轉卡尺)                    |        |
+| 2023/5/12 18:20~21:20                  | 張睿玹 | 字串演算法1(Hash、Trie、KMP、Z函數)                 | 黃頂軒 |
+| 2023/5/19 18:20~21:20                  | 李佳樺 | 字串演算法2(AC自動機、Suffix Array)                 | 黃頂軒 |
+| 2023/5/26 18:20~21:20                  | 羅文謙 | 動態規劃優化1(單調隊列優化、斜率優化)               | 謝師誠 |
+| 2023/6/2  18:20~21:20                  | 黃祥陞 | 動態規劃優化2(分治優化)                             |        |
 | 2023/6/9  18:20~21:20                  |        | 期末考週(看大家意願決定是否要進行happy meeting)     |        |
 | 2023/6/16 18:20~21:20                  |        | 期末考週(看大家意願決定是否要進行happy meeting)     |        |
 | 2023/6/23 18:20~21:20 (暑假改線上進行) |        | 動態規劃優化3(Aliens優化)                           |        |
@@ -89,6 +88,8 @@
 ​	每周進行大量的討論與練習，培養思考能力，並學習與精熟更多演算法和資料結構，學員也善用空閒時間一起參與線上競賽和模擬歷屆ICPC考古題，若能將上述課程內容全數吸收，預計能夠達到CPE大學程式能力檢定滿分、ICPC台灣站銅牌以上等等的成績。
 
 ## 伍、經費預算
+
+
 
 ## 陸、參考書目與其他相關資料
 
