--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -39,59 +39,61 @@
 
 ### 五、成員
 
-| 姓名   | 電話       | 系所           | 學號      | 身分   |
-| ------ | ---------- | -------------- | --------- | ------ |
-| 李佳樺 | 0908307601 | 清華學院學士班 | 111000104 | 大學生 |
-| 張睿玹 |            | 清華學院學士班 |           | 大學生 |
-| 黃頂軒 | 0902337526 | 清華學院學士班 | 111000223 | 大學生 |
-| 羅文謙 |            | 資工系         |           | 大學生 |
-| 張晏誠 |            | 資工系         |           | 大學生 |
-| 黃祥陞 |            | 資工系         |           | 大學生 |
-| 葉宥辰 |            | 資工系         |           | 大學生 |
-| 熊恩伶 |            | 資工系         |           | 大學生 |
-| 謝師誠 |            | 資工系         |           | 大學生 |
-| 李昕威 | 0966882869 | 資工系         | 109062309 | 大學生 |
-| 徐竣霆 | 0963543769 | 電資學院學士班 | 110060012 | 大學生 |
-| 林芷儀 | 0983655592 | 工學院學士班   | 110030018 | 大學生 |
+| 姓名   | 電話       | 系所           | 學號      | email                             | 身分   |
+| ------ | ---------- | -------------- | --------- | --------------------------------- | ------ |
+| 李佳樺 | 0908307601 | 清華學院學士班 | 111000104 | frankleeplayminecraft58@gmail.com | 召集人 |
+| 黃頂軒 | 0902337526 | 清華學院學士班 | 111000223 | felixhuang07@gmail.com            | 導讀人 |
+| 羅文謙 | 0972333336 | 資工系         | 111062113 | nandokabeam@gmail.com             | 導讀人 |
+| 張晏誠 | 0966337397 | 資工系         | 111062204 | jonason2004@gmail.com             | 導讀人 |
+| 黃祥陞 | 0971753733 | 資工系         | 111062117 | jasonhuang921003@gmail.com        | 導讀人 |
+| 葉宥辰 | 0901321222 | 資工系         | 111062203 | gilbert12.tw@gmail.com            | 導讀人 |
+| 謝師誠 | 0933998021 | 資工系         | 111062310 | joey123230@gmail.com              | 導讀人 |
+| 李昕威 | 0966882869 | 資工系         | 109062309 | lin01055006@gmail.com             | 導讀人 |
+| 熊恩伶 | 0922621328 | 資工系         | 111062215 | doo1222.tw@gmail.com              | 大學生 |
+| 徐竣霆 | 0963543769 | 電資學院學士班 | 110060012 | xavier230505@gmail.com            | 大學生 |
+| 林芷儀 | 0983655592 | 工學院學士班   | 110030018 | daphne61221@gmail.com             | 大學生 |
+| 林品安 | 0984229688 | 資工系         | 校外生    | luckyanthonyan@gmail.com          | 導讀人 |
 
 ## 貳、集會內容
 
-| 日期與時間                             | 紀錄人 | 課程內容                                            | 導讀人 |
-| -------------------------------------- | ------ | --------------------------------------------------- | ------ |
-| 2023/2/17 18:20~21:20                  | 李佳樺 | 讀書會介紹、基礎資料結構1(ST表、BIT)                | 葉宥辰 |
-| 2023/2/24 18:20~21:20                  | 張睿玹 | 基礎資料結構2(懶標線段樹、動態開點)                 | 黃祥陞 |
-| 2023/3/3  18:20~21:20                  | 李佳樺 | 基礎資料結構3(並查集及其應用)                       | 葉宥辰 |
-| 2023/3/10 18:20~21:20                  | 羅文謙 | 進階資料結構1(Treap)                                | 張晏誠 |
-| 2023/3/17 18:20~21:20                  | 黃祥陞 | 進階資料結構2(持久化)                               |        |
-| 2023/3/24 18:20~21:20                  | 李佳樺 | 根號算法(分塊、莫隊演算法、平方根分解)              | 葉宥辰 |
-| 2023/3/31 18:20~21:20                  | 葉宥辰 | 進階圖論1(歐拉路徑、橋、關節點、BCC、SCC)           | 羅文謙 |
-| 2023/4/7  18:20~21:20                  | 熊恩伶 | 網路流(Flow簡介、最大流、最小割、費用流)            | 黃頂軒 |
-| 2023/4/14 18:20~21:20                  | 謝師誠 | 進階圖論2(二分圖最大匹配、獨立集與覆蓋)             |        |
-| 2023/4/21 18:20~21:20                  | 徐竣霆 | 進階樹論(樹上啟發式、樹背包、輕重鏈剖分)            | 葉宥辰 |
-| 2023/4/28 18:20~21:20                  | 林芷儀 | 基礎計算幾何(線性代數、線段、凸包演算法)            |        |
-| 2023/5/5  18:20~21:20                  | 李佳樺 | 進階計算幾何(凸包優化、旋轉卡尺)                    |        |
-| 2023/5/12 18:20~21:20                  | 張睿玹 | 字串演算法1(Hash、Trie、KMP、Z函數)                 | 黃頂軒 |
-| 2023/5/19 18:20~21:20                  | 李佳樺 | 字串演算法2(AC自動機、Suffix Array)                 | 黃頂軒 |
-| 2023/5/26 18:20~21:20                  | 羅文謙 | 動態規劃優化1(單調隊列優化、斜率優化)               | 謝師誠 |
-| 2023/6/2  18:20~21:20                  | 黃祥陞 | 動態規劃優化2(分治優化)                             |        |
-| 2023/6/9  18:20~21:20                  |        | 期末考週(看大家意願決定是否要進行happy meeting)     |        |
-| 2023/6/16 18:20~21:20                  |        | 期末考週(看大家意願決定是否要進行happy meeting)     |        |
-| 2023/6/23 18:20~21:20 (暑假改線上進行) |        | 動態規劃優化3(Aliens優化)                           |        |
-| 2023/6/30 18:20~21:20 (暑假改線上進行) |        | 進階數論1(賽局、mod)                                | 黃頂軒 |
-| 2023/7/7  18:20~21:20 (暑假改線上進行) |        | 進階數論2(Burnside's lemma、卡特蘭數、排容原理)     | 黃頂軒 |
-| 2023/7/14 18:20~21:20 (暑假改線上進行) |        | 進階數論3(生成函數、快速傅立葉變換、離散傅立葉變換) | 黃頂軒 |
+| 日期與時間            | 地點    | 紀錄人 | 課程內容                                            | 導讀人 |
+| --------------------- | ------- | ------ | --------------------------------------------------- | ------ |
+| 2023/2/17 18:20~21:20 | 台達629 | 李佳樺 | 讀書會介紹、基礎資料結構1(ST表、BIT)                | 葉宥辰 |
+| 2023/2/24 18:20~21:20 | 台達629 | 李佳樺 | 基礎資料結構2(懶標線段樹、動態開點)                 | 黃祥陞 |
+| 2023/3/3  18:20~21:20 | 台達629 | 李佳樺 | 基礎資料結構3(並查集及其應用)                       | 葉宥辰 |
+| 2023/3/10 19:00~22:00 | 台達629 | 李佳樺 | 進階資料結構1(Treap)                                | 張晏誠 |
+| 2023/3/17 19:00~22:00 | 台達629 | 李佳樺 | 進階資料結構2(持久化)                               | 李昕威 |
+| 2023/3/24 19:00~22:00 | 台達629 | 李佳樺 | 根號算法(分塊、莫隊演算法、平方根分解)              | 葉宥辰 |
+| 2023/3/31 19:00~22:00 | 台達629 | 李佳樺 | 進階圖論1(歐拉路徑、橋、關節點、BCC、SCC)           | 羅文謙 |
+| 2023/4/7  19:00~22:00 | 台達629 | 李佳樺 | 網路流(Flow簡介、最大流、最小割、費用流)            | 黃頂軒 |
+| 2023/4/14 19:00~22:00 | 台達629 | 李佳樺 | 進階圖論2(二分圖最大匹配、獨立集與覆蓋)             | 林品安 |
+| 2023/4/21 19:00~22:00 | 台達629 | 李佳樺 | 進階樹論(樹上啟發式、樹背包、輕重鏈剖分)            | 葉宥辰 |
+| 2023/4/28 19:00~22:00 | 台達629 | 李佳樺 | 基礎計算幾何(線性代數、線段、凸包演算法)            | 李昕威 |
+| 2023/5/5  19:00~22:00 | 台達629 | 李佳樺 | 進階計算幾何(凸包優化、旋轉卡尺)                    | 李昕威 |
+| 2023/5/12 19:00~22:00 | 台達629 | 李佳樺 | 字串演算法1(Hash、Trie、KMP、Z函數)                 | 黃頂軒 |
+| 2023/5/19 19:00~22:00 | 台達629 | 李佳樺 | 字串演算法2(AC自動機、Suffix Array)                 | 黃頂軒 |
+| 2023/5/26 19:00~22:00 | 台達629 | 李佳樺 | 動態規劃優化1(單調隊列優化、斜率優化)               | 謝師誠 |
+| 2023/6/2  19:00~22:00 | 台達629 | 李佳樺 | 動態規劃優化2(分治優化)                             | 李昕威 |
+| 2023/6/9  19:00~22:00 |         |        | 期末考週(看大家意願決定是否要進行happy meeting)     |        |
+| 2023/6/16 19:00~22:00 |         |        | 期末考週(看大家意願決定是否要進行happy meeting)     |        |
+| 2023/6/23 19:00~22:00 |         |        | 動態規劃優化3(Aliens優化)                           | 李昕威 |
+| 2023/6/30 19:00~22:00 |         |        | 進階數論1(賽局、mod)                                | 黃頂軒 |
+| 2023/7/7  19:00~22:00 |         |        | 進階數論2(Burnside's lemma、卡特蘭數、排容原理)     | 黃頂軒 |
+| 2023/7/14 19:00~22:00 |         |        | 進階數論3(生成函數、快速傅立葉變換、離散傅立葉變換) | 黃頂軒 |
 
-## 參、導讀人資料
+## 參
 
-## 肆、預期成果
+## 、預期成果
 
 ​	每周進行大量的討論與練習，培養思考能力，並學習與精熟更多演算法和資料結構，學員也善用空閒時間一起參與線上競賽和模擬歷屆ICPC考古題，若能將上述課程內容全數吸收，預計能夠達到CPE大學程式能力檢定滿分、ICPC台灣站銅牌以上等等的成績。
 
-## 伍、經費預算
+## 肆、經費預算
 
+| 項目             | 單價   | 數量            | 金額   | 備註                                                         |
+| ---------------- | ------ | --------------- | ------ | ------------------------------------------------------------ |
+| 餐費             | 100元  | 12人$\times$3次 | 3600   |                                                              |
+| 校外導讀人鐘點費 | 2000元 | 3小時           | 6000元 | 邀請交大現役競技程式設計選手前來參與討論與教學二分圖匹配等相關主題 |
 
+## 伍、參考書目與其他相關資料
 
-## 陸、參考書目與其他相關資料
-
-
-
+參考書目：2022年國立清華大學暑期程式競賽集訓營講義
