--- a/11120/競技程式設計讀書會申請表.md
+++ b/11120/競技程式設計讀書會申請表.md
@@ -58,7 +58,7 @@
 
 | 日期與時間            | 地點    | 紀錄人 | 課程內容                                            | 導讀人 |
 | --------------------- | ------- | ------ | --------------------------------------------------- | ------ |
-| 2023/2/17 18:20~21:20 | 台達629 | 李佳樺 | 讀書會介紹、基礎資料結構1(ST表、BIT)                | 葉宥辰 |
+| 2023/2/17 18:20~21:20 | 台達629 | 李佳樺 | 讀書會介紹、基礎資料結構1(ST表、BIT)                | 黃頂軒 |
 | 2023/2/24 18:20~21:20 | 台達629 | 李佳樺 | 基礎資料結構2(懶標線段樹、動態開點)                 | 黃祥陞 |
 | 2023/3/3  18:20~21:20 | 台達629 | 李佳樺 | 基礎資料結構3(並查集及其應用)                       | 葉宥辰 |
 | 2023/3/10 19:00~22:00 | 台達629 | 李佳樺 | 進階資料結構1(Treap)                                | 張晏誠 |
